# gungnir

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
include/gungnir/: gungnir.hpp
tests/: CMakeLists.txt  test_dispatch.cpp  test_dispatch_once.cpp  test_dispatch_serial.cpp  test_dispatch_sync.cpp  test_on_complete.cpp  test_on_failure.cpp  test_on_success.cpp
